buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net/' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
    }
}
apply plugin: 'net.minecraftforge.gradle'

version = '0.0.0'
group = 'top.seraphjack'
archivesBaseName = 'SimpleLogin-1.17'

java.toolchain.languageVersion = JavaLanguageVersion.of(16)

/*
if (System.getenv().BUILD_NUMBER != null) {
    version += "-build${System.getenv().BUILD_NUMBER}"
}
 */

minecraft {
    mappings channel: 'official', version: '1.17.1'
    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            mods {
                simplelogin {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'

            property 'forge.logging.console.level', 'debug'

            mods {
                simplelogin {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'

            // Recommended logging level for the console
            property 'forge.logging.console.level', 'debug'

            args '--mod', 'simplelogin', '--all', '--output', file('src/generated/resources/')

            mods {
                simplelogin {
                    source sourceSets.main
                }
            }
        }
    }
}

configurations {
    shade
    compileOnly.extendsFrom shade
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.17.1-37.0.103'

    shade 'org.mindrot:jbcrypt:0.4'
}

allprojects {
    repositories {
        maven { url = 'https://maven.minecraftforge.net/' }
        mavenCentral()
    }
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    from(sourceSets.main.resources.srcDirs) {
        include 'META-INF/mods.toml'
        expand 'version': project.version
    }

    from(sourceSets.main.resources.srcDirs) {
        exclude 'META-INF/mods.toml'
    }
}

tasks.jar.mustRunAfter(processResources)

jar {
    manifest {
        attributes([
                "Specification-Title"     : "SimpleLogin",
                "Specification-Vendor"    : "SeraphJACK",
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }

    from(configurations.shade.collect {
        it.isDirectory() ? it : zipTree(it)
    }) {
        exclude 'META-INF/**'
    }
}
